# dbus-huaweisun2000-pvinverter

./: .dockerignore  .flake8  .gitignore  AUTHORS  CONTRIBUTING.md  LICENSE  README.md  config.py  configure.sh  connector_modbus.py  dbus-huaweisun2000-pvinverter.py  docker-compose.dev.yml  docker-compose.install-test.yml  install.sh  pyproject.toml  restart.sh  settings.py  uninstall.sh
.github/: FUNDING.yml
.github/workflows/: python-ci.yml
docker/: modbus_sim.py  run_venus_with_driver.sh  test_install_uninstall.sh
gui/: PageSettingsHuaweiSUN2000.qml
gui-v2/Victron/VenusOS/data/common/: PvInverter.qml
gui-v2/Victron/VenusOS/pages/solar/: SolarInputListPage.qml
patches/gui-v2/: 0001-huawei-pvinverter-ac-summary-fallback.patch  README.md
service/: run
src/dbus_huaweisun2000_pvinverter/: __init__.py  config.py  connector_modbus.py  main.py  metrics.py  settings.py
src/dbus_huaweisun2000_pvinverter/sun2000_modbus/: __init__.py  datatypes.py  inverter.py  registers.py
sun2000_modbus/: inverter.py  mappings.py  registers.py
tests/: test_config_defaults.py  test_connector_modbus.py  test_formatters.py  test_inverter.py  test_metadata.py  test_service.py
