[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbus-huaweisun2000-pvinverter"
dynamic = ["version"]
description = "D-Bus driver for Huawei SUN2000 integration with Victron Venus OS"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Taras Kolodchyn"}]
license = {file = "LICENSE"}
dependencies = [
    "pymodbus>=2.5,<3.0",
]

[project.optional-dependencies]
dev = [
    "black==24.10.0",
    "flake8==7.1.1",
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "venv", "img", "gui", "service", "*.egg-info"]

[tool.setuptools_scm]
fallback_version = "0+unknown"
local_scheme = "no-local-version"
tag_regex = "^v(?P<version>.+)$"
version_scheme = "no-guess-dev"
